--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
 
 </head>
 <body>
-    
+    <script src="lib/p5.js"></script>
+    <script src="lib/p5.dom.min.js"></script>
+    <script src="lib/p5.sound.min.js"></script>
+  <script src="lib/p5.play.js"></script>
    
     <script src="sketch.js"></script>
 </body></html>
